--- a/README
+++ b/README
@@ -1,15 +1,32 @@
-# Description
+## Description
+
 - Express framework JavaScript starter repository.
 - You must have NPM and Node installed to run the app.
-=======
+```
 
-### Installation
+## Installation
+
 $ npm install
+```
+## Running the app
 
-# Running the app
+# development
 $ npm run start
 
+# watch mode
+$ npm run start:dev
+
+```
 # Postman collection URL:-
 https://www.getpostman.com/collections/11a91768014add02c5ce
+```
+
+## Support
+```
+
+
+## License
+```
+
 
 
